db-cluster/users/k8s-cluster2/ns-pengseangsim210-gmail-com-9d7d574c/postgrestptbuk/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgrestptbuk-tcp
  namespace: ns-pengseangsim210-gmail-com-9d7d574c
spec:
  entryPoints:
  - postgresql
  routes:
  - match: HostSNI(`seang-clone.autonomous-istad.com`)
    services:
    - name: postgrestptbuk-postgresql-pooler-rw
      port: 5432
  tls:
    passthrough: true
